upload de fotos atualizado

--- a/src/app/views/admin/recipes/details.njk
+++ b/src/app/views/admin/recipes/details.njk
@@ -21,7 +21,7 @@
     </div>
     <div class="recipes">
             <div class="recipe-card" id="{{recipe.id}}">
-                <img src="{{recipe.image}}" alt="{{recipe.title}}">
+                <img src="{{images.src}}" alt="{{images.name}}">
                 <h2>{{recipe.title}}</h2>
                 <h4>by {{recipe.chefs_name}}</h4>
             </div>
